--- a/server/http/index.html
+++ b/server/http/index.html
@@ -25,6 +25,18 @@
 
 
     <style>
+        #languagesetter {
+            text-align: center;
+            color: #e4a;
+            font-weight: 800;
+            text-shadow: 0 0 9px #FF3399;
+            padding: 15px;
+            word-spacing: 35px;
+        }
+        
+        #languagesetter span {
+            cursor: pointer;
+        }
     </style>
 
 </head>
@@ -38,6 +50,8 @@
         </h1>
         </span>
         <ul class="featurelist" style="font-size:small">
+            <li><span data-translation-login class="psudolinksingle" onclick="singlesitenav('home')">Login</span>
+            </li>
             <li class="launcheronly"><span class="psudolinksingle " onclick='ygopro("-l")'>LAN Mode</span>
             </li>
             <li><span data-translation-deckedit class="psudolinksingle" onclick='ygopro("-d");singlesitenav("deckedit");'>Deck Edit</span>
@@ -63,7 +77,7 @@
     <header style="top:0vh;" id='home'>
         <div id="homecontainer">
             <span class="psudolinksingle" onclick="singlesitenav('home')">
-                <h1 class="shine">
+                <h1 class="shine" style="padding-top:20px">
                     <span  style="color:#e4a;">YGOPro</span> <span data-translation-salvationserver>Salvation Server</span>
             </h1>
             </span>
@@ -106,7 +120,9 @@
             <form id="ipblogin" style="text-align:center; color: white !important; display:block; margin:0 auto" class="launcheronly loginsystem">
                 <input data-translation-forumusername id="ips_username" type="text" class="launcheronly loginsystem" name="ips_username" tabindex="1" placeholder="Forum Username">
                 <input data-translation-forumpassword id="ips_password" type="password" class="launcheronly loginsystem" name="ips_password" tabindex="2" placeholder="Forum Password">
-                <br><span style="font-size:.9em; display:block; margin-top:-0.5em;"><input type="checkbox" id="ips_remember" ><span data-translation-rememberusernamepassword> Remember Username &amp; Password?</span> | <a data-translation-registerviaforum class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=register" target="_blank">Register via Forum</a> | <a data-translation-forgotpassword class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=lostpass">Forgot Password</a>
+                <br><span style="font-size:.9em; display:block; margin-top:-0.5em;"><input type="checkbox" id="ips_remember" ><span data-translation-rememberusernamepassword> Remember Username &amp; Password?</span>
+                <br />
+                <br /> <a data-translation-registerviaforum class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=register" target="_blank">Register via Forum</a> | <a data-translation-forgotpassword class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=lostpass">Forgot Password</a>
                 </span>
                 <br />
                 <button data-translation-login id="dolog" class="launcheronly loginsystem">Login</button>
@@ -127,7 +143,7 @@
                 <span onclick="translateLang('ar')">لغةعربي</span>
                 <span onclick="translateLang('zh')">中文(简体)</span>
             </div>
-            <div class="webonly" style="width:728px;margin:0 auto">
+            <div style="width:728px;margin:0 auto">
                 <SCRIPT language="Javascript">
                     var cpmstar_rnd = Math.round(Math.random() * 999999);
                     var cpmstar_pid = 44429;
