use the [enter] key

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -50,8 +50,6 @@
         </h1>
         </span>
         <ul class="featurelist" style="font-size:small">
-            <li><span data-translation-login class="psudolinksingle" onclick="singlesitenav('home')">Login</span>
-            </li>
             <li class="launcheronly"><span class="psudolinksingle " onclick='ygopro("-l")'>LAN Mode</span>
             </li>
             <li><span data-translation-deckedit class="psudolinksingle" onclick='ygopro("-d");singlesitenav("deckedit");'>Deck Edit</span>
@@ -125,7 +123,7 @@
                 <br /> <a data-translation-registerviaforum class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=register" target="_blank">Register via Forum</a> | <a data-translation-forgotpassword class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=lostpass">Forgot Password</a>
                 </span>
                 <br />
-                <button data-translation-login id="dolog" class="launcheronly loginsystem">Login</button>
+                <button data-translation-login id="dolog" style="display:none;" class="launcheronly loginsystem">Login</button>
             </form>
             <div style="font-size:.5em; text-align:center; color:#747" id="versioninfo">Version 4 : Production 4 : Revision 1</div>
             <div style="font-size:1.5em; text-align:center; color:pink" class='webonly'></div>
