--- a/server/http/index.html
+++ b/server/http/index.html
@@ -167,7 +167,7 @@
     </header>
     <header style="padding-top:50px" id="host">
 
-        <section id="hostSettings" style="height:77%">
+        <section id="hostSettings" style="height:80%">
             <div>
 
                 <h2 data-translation-settings>Settings</h2>
@@ -239,11 +239,15 @@
                 <div data-translation-host class="button" id="creategameok" onclick='setHostSettings();'>Host</div>
 
             </div>
-            <SCRIPT language="Javascript">
-                var cpmstar_rnd = Math.round(Math.random() * 999999);
-                var cpmstar_pid = 44429;
-                document.writeln("<SCR" + "IPT language='Javascript' src='//server.cpmstar.com/view.aspx?poolid=" + cpmstar_pid + "&script=1&rnd=" + cpmstar_rnd + "'></SCR" + "IPT>");
-            </SCRIPT>
+            <div style="width:728px; height:90px; margin:0 auto;">
+                <SCRIPT language="Javascript">
+                    var cpmstar_rnd = Math.round(Math.random() * 999999);
+                    var cpmstar_pid = 44429;
+                    document.writeln(" < SCR " + "
+                            IPT language = 'Javascript'
+                            src = '//server.cpmstar.com/view.aspx?poolid=" + cpmstar_pid + "&script=1&rnd=" + cpmstar_rnd + "' > < /SCR " + "IPT>");
+                </SCRIPT>
+            </div>
         </section>
     </header>
     <header style="padding-top:50px" id="deckedit">
