--- a/server/http/index.html
+++ b/server/http/index.html
@@ -168,7 +168,7 @@
     </header>
     <header style="padding-top:50px" id="host">
 
-        <section id="hostSettings" style="height:80%">
+        <section id="hostSettings" style="height:80%; margin-top:.5%">
             <div>
 
                 <h2 data-translation-settings>Settings</h2>
