--- a/server/http/index.html
+++ b/server/http/index.html
@@ -138,6 +138,7 @@
                 <span onclick="translateLang('fa')">فارسی</span>
                 <span onclick="translateLang('ar')">لغةعربي</span>
                 <span onclick="translateLang('zh')">中文(简体)</span>
+                <span onclick="translateLang('he')">עברית</span>
             </div>
             <div style="width:728px;margin:0 auto">
                 <SCRIPT language="Javascript">
@@ -423,6 +424,7 @@
                             <option value="zh">中文(简体)</option>
                             <option value="fa">فارسی</option>
                             <option value="ar">لغة عربي</option>
+                            <option value="he">עברית</option>
                         </select>
                     </div>
                 </div>
