--- a/server/http/index.html
+++ b/server/http/index.html
@@ -334,6 +334,20 @@
         </audio>
 -->
     </header>
+    <header style="padding-top:50px" id="ranking"></header>
+    <header style="padding-top:50px" id="admin">
+        <div>
+            <label>End Game Number</label>
+            <input type="text">
+            <button>Kill</button>
+            <label>Kick User</label>
+            <input type="text">
+            <button>Murder</button>
+            <label>Shutdown Server</label>
+            <input type="text">
+            <button>Commit Genocide</button>
+        </div>
+    </header>
     <header style="padding-top:50px" id="settings">
 
         <h3 data-translation-gamesettings style="text-align:center; color:silver">Game Settings</h3>
