--- a/server/http/index.html
+++ b/server/http/index.html
@@ -156,7 +156,7 @@
         <section id='gamelistsection'>
             <div id="gamelistitems"></div>
             <div class='gamelistcenter' style="float:left; margin:1vh 1vw">
-                Active Duels : <span id="activeduels"></span>
+                Active Duels : <span id="activeduels"></span> | Players : <span id="activeduelist"></span>
             </div>
             <div class='launcheronly gamelistcenter'>
                 <label data-translation-currentdeck>Current Deck </label>
