--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -137,10 +137,11 @@
                 <div class="searchBlock">
                     <label for="forbiddenLimitedSelect">Limit: </label>
                     <select class="forbiddenLimitedSelect" data-input-forbiddenlimited>
-                        <option value="3">All</option>
+                        <option value="4">All</option>
                         <option value="0">Forbidden</option>
                         <option value="1">Limited</option>
                         <option value="2">Semi-Limited</option>
+						<option value="3">Not on the list</option>
                     </select>
                     <br />
                     <label for="atkInput">ATK</label>
