--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -96,7 +96,7 @@
                         </select>
                     </label>
                     <br />
-                    <label for="raceSelect">Type
+                    <label for="raceSelect">Type:
                         <select class="raceSelect" data-input-race>
                             <option value="">Specify a Monster type</option>
                             <option value="1">Warrior</option>
@@ -135,7 +135,6 @@
                     <label for="levelInput">Level/Rank:
                         <input class="levelInput" type="number" min="1" max="12" data-input-level>
                     </label>
-                    <br />
                     <label for="scaleInput">Scale:
                         <input class="scaleInput" type="number" min="1" max="12" data-input-scale>
                     </label>
