Adding disabled attributes

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -49,7 +49,7 @@
                             <option value="2">Spells</option>
                             <option value="4">Traps</option>
                         </select>
-                        <select class="monsterCardSelect">
+                        <select class="monsterCardSelect" disabled>
                             <option value>Specify a monster type</option>
                             <option value="16">Normal</option>
                             <option value="32">Effect</option>
@@ -58,7 +58,7 @@
                             <option value="4096">Tuner</option>
                             <option value="4194336">Toon</option>
                         </select>
-                        <select class="monsterTypeSelect">
+                        <select class="monsterTypeSelect" disabled>
                             <option value>Specify a monster type</option>
                             <option value="64">Fusion</option>
                             <option value="128">Ritual</option>
@@ -66,7 +66,7 @@
                             <option value="8388608">Xyz</option>
                             <option value="16777216">Pendulum</option>
                         </select>
-                        <select class="spellSelect">
+                        <select class="spellSelect" disabled>
                             <option value="2">Specify a card type</option>
                             <option value="2">Normal</option>
                             <option value="65538">Quick-Play</option>
@@ -75,7 +75,7 @@
                             <option value="262146">Equip</option>
                             <option value="524290">Field</option>
                         </select>
-                        <select class="trapSelect">
+                        <select class="trapSelect" disabled>
                             <option value="4">Specify a card type</option>
                             <option value="4">Normal</option>
                             <option value="131076">Continuous</option>
@@ -84,7 +84,7 @@
                     </label>
                     <br />
                     <label for="attributeSelect">Attribute:
-                        <select class="attributeSelect" data-input-attribute>
+                        <select class="attributeSelect" data-input-attribute disabled>
                             <option value="">Specify an attribute</option>
                             <option value="1">EARTH</option>
                             <option value="2">WATER</option>
@@ -97,7 +97,7 @@
                     </label>
                     <br />
                     <label for="raceSelect">Type:
-                        <select class="raceSelect" data-input-race>
+                        <select class="raceSelect" data-input-race disabled>
                             <option value="">Specify a Monster type</option>
                             <option value="1">Warrior</option>
                             <option value="2">Spellcaster</option>
