--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -8,6 +8,7 @@
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/deck-edit.js"></script>
+	<script src="js/drawDeckEditor.js"></script>
 </head>
 
 <body>
