Rearranging script tags

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -4,9 +4,10 @@
     <title>Salvation Pro | Deck Editor</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="css/deck-edit.css">
-    <script src="js/ConfigParser.js"></script>
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
+	<script src="js/ConfigParser.js"></script>
+	<script src="js/parseYDK.js"></script>
     <script src="js/deck-edit.js"></script>
 	<script src="js/drawDeckEditor.js"></script>
 </head>
