Adding dummyYDK.js

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -10,6 +10,7 @@
 	<script src="js/parseYDK.js"></script>
     <script src="js/deck-edit.js"></script>
 	<script src="js/drawDeckEditor.js"></script>
+	<script src="js/dummyYDK.js"></script>
 </head>
 
 <body>
