I don't think <select /> works

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -25,11 +25,11 @@
         <div class="searchBar">
             <div class="searchLeft">
                 <label for="banlistSelect">Ban List:
-                   <select class="banlistSelect" />
+                   <select class="banlistSelect"></select>
                 </label>
                 <br />
                 <label for="deckSelect">Deck:
-                   <select class="deckSelect" />
+                   <select class="deckSelect"></select>
                 </label>
                 <button class="saveDeck">Save</button>
                 <br />
