On hover, makeDescription for main, side, extra

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -17,7 +17,7 @@
     <div class="mainContainer">
         <div class="left">
             <div class="cardImage">
-                <img class="imgContainer" src="" />
+                <img class="imgContainer" src="http://ygopro.us/ygopro/pics/cover.jpg" />
             </div>
             <div class="cardDescription">
             </div>
