minor html fixes, major css changes

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -33,15 +33,15 @@
                 </label>
                 <button class="saveDeck">Save</button>
                 <br />
-                <button class="deleteDeck">Delete</button>
-                <input type="text" class="decknameInput">
                 <button class="saveDeckAs">Save as</button>
+                <label for="decknameInput">Name Input:
+                   <input type="text" class="decknameInput">
+                </label>
+                <button class="deleteDeck">Delete</button>
                 <br />
-                <div class="clearsortshufflewrapper">
-                    <button class="shuffleDeck">Shuffle</button>
-                    <button class="sortDeck">Sort</button>
-                    <button class="clearDeck">Clear</button>
-                </div>
+                <button class="shuffleDeck">Shuffle</button>
+                <button class="sortDeck">Sort</button>
+                <button class="clearDeck">Clear</button>
             </div>
             <div class="searchRight">
                 <div class="searchBlock">
